@@ -42,9 +42,7 @@ PHP_METHOD(Spoofchecker, isSuspicious)
 	}
 
 	if (error_code) {
-		zval_ptr_dtor(error_code);
-		ZVAL_LONG(Z_REFVAL_P(error_code), ret);
-		Z_TRY_ADDREF_P(error_code);
+		ZEND_TRY_ASSIGN_REF_LONG(error_code, ret);
 	}
 	RETVAL_BOOL(ret != 0);
 }
@@ -76,9 +74,7 @@ PHP_METHOD(Spoofchecker, areConfusable)
 	}
 
 	if (error_code) {
-		zval_ptr_dtor(error_code);
-		ZVAL_LONG(Z_REFVAL_P(error_code), ret);
-		Z_TRY_ADDREF_P(error_code);
+		ZEND_TRY_ASSIGN_REF_LONG(error_code, ret);
 	}
 	RETVAL_BOOL(ret != 0);
 }
